--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
         <!-- Primary Meta Tags -->
         <title>Portfolio • Bhavesh Salunke</title>
         <meta name="title" content="Portfolio • Bhavesh Salunke" />
+        <meta name="author" content="Bhavesh Salunke" />
+        <meta name="keywords" content="Bhavesh Salunke, Full Stack Developer, React Developer, Portfolio, JavaScript, India, n8n, Firebase, Snowflake" />
         <meta
             name="description"
             content="A Freelance Web Developer with a solid foundation in Information Technology from the University of Pune. Since 2019, I've been actively engaged in web development, successfully completing diverse projects for various clients. Proficient in web design, programming, and open-source contributions, I prioritize delivering high-quality work within deadlines. Beyond coding, I enjoy connecting with people and aspire to tackle broader business questions through simple analytics techniques. I thrive on structured code, databases, and Object-Oriented Programming. Outside of work, I find joy in the perfect blend of coffee and coding, appreciate drama and music, and am passionate about gadgets and photography. In my downtime, you'll catch me solving puzzles, creating memes, and relishing the social aspects of life. Every moment, for me, is a new beginning, and I live my life to the fullest. Let's connect and explore how I can contribute to your projects!"
